# reeber

./: .build.yml  .gitignore  CMakeLists.txt  LEGAL.txt  LICENSE.txt  README.md  peru.yaml
examples/: CMakeLists.txt
examples/amr-connected-components/: .gitignore  CMakeLists.txt
examples/amr-connected-components/include/: amr-connected-components-complex.h  amr-connected-components-simple.h  amr-merge-tree-helper.h  disjoint-sets.h  fab-cc-block.h  fab-cc-block.hpp  fab-connected-component.h  fab-connected-component.hpp  small_set.h
examples/amr-connected-components/src/: amr-connected-components.cpp
examples/amr-connected-components/tests/: test_amr_cc.cpp  test_amr_merge_tree.cpp
examples/amr-connected-components/tests/python_test/: compare_integrals.py
examples/amr-merge-tree/: CMakeLists.txt
examples/amr-merge-tree/include/: amr-merge-tree-helper.h  amr-merge-tree-send-componentwise.h  amr-merge-tree-send-simple.h  amr-persistent-integral.h  amr-plot-reader.h  fab-block.h  fab-tmt-block.h  fab-tmt-block.hpp  read-hdf5.h  read-npy.h
examples/amr-merge-tree/src/: amr-merge-tree-send-components.cpp  amr-merge-tree-simple.cpp  amr-merge-tree.cpp  amr-plot-reader.cpp  amr_merge_tree_send_components.cpp  amr_merge_tree_simple.cpp  hdf5-reader.cpp  tests.cpp  write-refined-amr.cpp
examples/amr-merge-tree/tests/: test_amr_merge_tree.cpp
examples/amr-merge-tree/tests/python_test/: compare_integrals.py  get_intl.sh
examples/global/: CMakeLists.txt  mt-np-global.cpp  persistence.cpp  pmt-depth.cpp  pmt-np-global.cpp  tmt-depth.cpp  tmt-np-global.cpp
examples/include/: edges.h  ghosts.h  memory.h  output-persistence.h  reader-interfaces.h
examples/local-global/: CMakeLists.txt  merge-tree-block.h  mt-bl-local-global.cpp  mt-lg-ghosts.cpp  mt-local-global.cpp  mt-np-lg-ghosts.cpp  mt-np-local-global.cpp  nested-integral-lg.cpp  output-persistence.h  output_persistence.h  persistence-lg.cpp  persistent-integral-block.h  persistent-integral-lg.cpp  print-trees.cpp  prune.h  reader-interfaces.h  real.h  tmt-distributed.cpp  tmt-lg-ghosts.cpp  triplet-merge-tree-block.h  triplet-persistence-lg.cpp
examples/local-global/tests/: CMakeLists.txt  LyAReeberTest-pi.sh  LyAReeberTest_plt00242_128x128x128_density-b8-n-w.pi  LyAReeberTest_plt00242_128x128x128_density-b8-n.pi  LyAReeberTest_plt00242_128x128x128_density.npy.md5  dens40-b8-n-w.pi  dens40-b8-n.pi  dens40-pi.sh  dens40-tmt-pd-n-w.dgm  dens40-tmt-pd-n.dgm  dens40.npy  sort.sh
examples/mst/: CMakeLists.txt  kruskal-mst.cpp  tmt-mst.cpp
examples/simple/: CMakeLists.txt  mt-global.cpp  persistence.cpp  simple.cpp
ext/Catch2/src/catch2/: catch_session.cpp
ext/Catch2/src/catch2/internal/: catch_enforce.hpp  catch_is_permutation.hpp
ext/Catch2/src/catch2/matchers/: catch_matchers_contains.hpp  catch_matchers_range_equals.hpp
ext/HighFive/: CHANGELOG.md  CMakeLists.txt  README.md
ext/HighFive/.github/workflows/: check_doxygen_awesome_version.yml  ci.yml  clang_format.yml  coverage.yml  gh-pages.yml  integration_trigger.yml  version_file.yml
ext/HighFive/include/highfive/bits/: H5Slice_traits_misc.hpp  h5d_wrapper.hpp
ext/HighFive/tests/unit/: tests_high_five_easy.cpp
include/: format.h
include/dlog/: counters.h  log.h  stats.h
include/reeber/: amr-vertex.h  amr_helper.h  box.h  box.hpp  distributed-tmt.h  distributed-tmt.hpp  edges.h  grid-serialization.h  grid.h  masked-box.h  masked-box.hpp  merge-tree-serialization.h  merge-tree.h  merge-tree.hpp  parallel-tbb-serialization.h  parallel-tbb.h  path-merge-tree-serialization.h  path-merge-tree.h  path-merge-tree.hpp  point.h  serialization.h  tree-union.h  triplet-merge-tree-serialization.h  triplet-merge-tree.h  triplet-merge-tree.hpp  vertices.h
include/reeber/io/: boxlib.h
include/reeber/range/: filtered.h  map.h  transformed.h  utility.h
nersc/python/: compare_answers.py
slurm_scripts/edison/: generate_amr_cc.py
slurm_scripts/edison/python_generated/: gen_sl.py
