if                          (boxlib)
    string                  (TOLOWER ${CCSE_PRECISION} CCSE_PRECISION_LC)
endif                       ()

foreach                     (real   float double)

add_executable              (mt-np-global-${real}   mt-np-global.cpp ${DEBUG_SOURCES} ${SOURCES})
target_link_libraries       (mt-np-global-${real}   ${libraries})
set_target_properties       (mt-np-global-${real}   PROPERTIES COMPILE_FLAGS -DREEBER_REAL=${real})

foreach                     (t  tmt-np-global pmt-np-global)
    add_executable              (${t}-${real}   ${t}.cpp ${DEBUG_SOURCES} ${SOURCES})
    if                          (boxlib)
        if                      (${real} STREQUAL ${CCSE_PRECISION_LC})
          target_link_libraries (${t}-${CCSE_PRECISION_LC}      ${libraries} ${CCSE_LIBRARIES})
          set_target_properties (${t}-${CCSE_PRECISION_LC}      PROPERTIES COMPILE_FLAGS "-DREEBER_USE_BOXLIB_READER -DREEBER_REAL=${CCSE_PRECISION_LC}")
        else                    ()
          target_link_libraries (${t}-${real}   ${libraries})
          set_target_properties (${t}-${real}   PROPERTIES COMPILE_FLAGS -DREEBER_REAL=${real})
        endif                   ()
    else                        ()
      target_link_libraries     (${t}-${real}   ${libraries})
      set_target_properties     (${t}-${real}   PROPERTIES COMPILE_FLAGS -DREEBER_REAL=${real})
    endif                       ()
endforeach                  ()

foreach                     (t  tmt-depth pmt-depth)
    add_executable              (${t}-${real}     ${t}.cpp ${DEBUG_SOURCES} ${SOURCES})
    target_link_libraries       (${t}-${real}     ${libraries})
    set_target_properties       (${t}-${real}     PROPERTIES COMPILE_FLAGS -DREEBER_REAL=${real})
endforeach                  ()

add_executable              (persistence-${real}   persistence.cpp ${DEBUG_SOURCES} ${SOURCES})
target_link_libraries       (persistence-${real}   ${libraries})
set_target_properties       (persistence-${real}   PROPERTIES COMPILE_FLAGS -DREEBER_REAL=${real})

endforeach                  (real)
